# vet_app_api

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
pets/: admin.py  models.py  serializers.py  urls.py  views.py
pets/migrations/: 0001_initial.py
vet_api/: asgi.py  settings.py  urls.py  wsgi.py
